# alp-data

./: .dict-allowed.txt  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  fix_datasets.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  resolve_inits.py  versions.json
.github/: CODEOWNERS
.github/workflows/: ci-temp.yml  ci.yml  docs-deploy.yml  docs-validate.yml  docs.yml  pre-commit.yml  publish.yml  publish_private.yml  publish_public.yml  python-ci.yml  ruff.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/io/: index.html
0.1.0/reference/: index.html
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/datasets/: index.html
1.0.2/: 404.html  index.html  objects.inv  sitemap.xml
1.1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.1.1/: 404.html  index.html  objects.inv  sitemap.xml
1.1.2/: 404.html  index.html  objects.inv  sitemap.xml
1.10.0/: 404.html  index.html  objects.inv  sitemap.xml
1.2.0/: 404.html  index.html  sitemap.xml
1.2.1/: 404.html  index.html  sitemap.xml
1.2.2/: 404.html  index.html  sitemap.xml
1.3.0/: 404.html  index.html  objects.inv  sitemap.xml
1.4.0/: 404.html  index.html  sitemap.xml
1.5.0/: 404.html  index.html  objects.inv  sitemap.xml
1.6.0/: 404.html  index.html  objects.inv  sitemap.xml
1.7.0/: 404.html  index.html  sitemap.xml
1.8.0/: 404.html  index.html  objects.inv  sitemap.xml
1.9.0/: 404.html  index.html  sitemap.xml
alp_data/: chain.py  concat.py  dataset.py  utils.py
claude_plans_todos/: combine_293_257_ffmpeg_readaudio_plan.md  dashboard_plan.md
dashboard/: .gitignore  Caddyfile  Dockerfile  Dockerfile.dockerignore  README.md  pyproject.toml  rxconfig.py  start.sh
dashboard/assets/: dataset_blurbs.json  family_common_names.json  style.css
dashboard/esp_dashboard/: __init__.py  api.py  dataset_page.py  dataset_state.py  db.py  esp_dashboard.py  header.py  llm.py  state.py  talk_page.py  talk_state.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: backends.md  chain.md  concatenate.md  datasets.md  getting_started.md  index.md  io.md  reference.md  schema_spec.md  transforms.md
esp_data/: __init__.py  audio_language.py  chain.py  concat.py  config.py  dataset.py  dataset_to_be_deprecated.py  dataset_utils.py  export.py  exporters.py  generic_dataset.py  paths.py  schema.py  utils.py  webdataset_utils.py
examples/: gcs_path_example.py
jobs/: benchmark_beans.sh  benchmark_latency.sh  benchmark_latency_array_exp.sh  benchmark_latency_config.sh  benchmark_latency_default.sh  benchmark_loading_time.sh  benchmark_loading_time_config.sh  benchmark_loading_time_default.sh  build_ssw60.sh  build_whales_synthetic.sh  clotho_stage.sh  dori_crop_download.sh  export_stage2_variations_backend.sh  inat_m4a_to_wav.sh  inat_mp3_to_wav.sh  iteration_check.sh  loading_time.sh  lt.sh  migrate_datasets.sh  multi_dataset_latency.sh  multi_dataset_loading_time.sh  pteroset_assemble_upload.sh  resample_clotho.sh  resample_dartmouth_avian_soundscapes.sh  resample_pteroset.sh  resample_roots_32khz.sh  resample_weldy_dawn_chorus.sh  resample_zenodo_17282717.sh  run_benchmark.sh  verify_ssw60.sh  zenodo_17282717_stage.sh
latest/: 404.html  index.html  objects.inv  sitemap.xml
notebooks/: deepdive_presentation.ipynb  hf_datasets_tutorial.ipynb  perf_benchmarking_beans0_hfdataset.ipynb  testing_fs_vs_cloudpathlib.ipynb
scripts/: audit_roots_xc_inat_32k.py  benchmark_webds_arrow_streaming.py  build_beans_pro_crow_zebra_calltype.py  build_beans_pro_dcase_detection.py  build_beans_pro_dcase_fewshot.py  build_beans_pro_f0_mean.py  build_beans_pro_feature_conditioned_detection.py  build_beans_pro_giant_otter_calltype.py  build_beans_pro_gibbon_detection.py  build_beans_pro_gibbon_fewshot.py  build_beans_pro_new_unseen_species_mcq.py  build_beans_pro_presence.py  build_beans_pro_unseen_species_mcq.py  build_beans_pro_weldy_call_or_song.py  build_beans_pro_weldy_call_or_song_6s.py  build_beans_pro_weldy_call_or_song_sp_10s.py  build_beans_pro_weldy_call_or_song_species_conditioned.py  build_beans_pro_weldy_drum_call_song.py  build_beans_pro_weldy_multi_call_type.py  build_beans_pro_xc_new_eval.py  build_beans_zero_call_variants.py  build_drasdic_same_species.py  build_drasdic_species_mcq.py  build_ford_catalogue_4way_multi_audio.py  build_raincoast_2025_pulsed_whistle_multi_audio.py  build_silentcities_manifest.py  build_whales_synthetic.py  check_all_dataset_splits.sh  check_dataset_splits_exist.py  check_roots_32k_redirect.py  check_synthetic_sed_32k.py  clean_animalspeak_splits.py  data_discovery.py  drop_columns_from_splits.py  eval_naturelm.py  export_stage2_f0_backends.py  extract_spanish_carrion_crows_flight_clips.py  generate_beans_pro_tier2_table.py  generate_stage2_tables.py  hf_template_dataset_script.py  (+20 more)
tests/: test_animal_sound_archive.py  test_animal_speak.py  test_anuraset_strong.py  test_arctic_bird_sounds.py  test_audio_language.py  test_audio_language_transform.py  test_audio_skills_xl.py  test_audio_utils.py  test_audiocaps.py  test_audioset.py  test_audioset_strong.py  test_backends.py  test_balanced_sample.py  test_barkley_canyon.py  test_beans.py  test_bengalese_finch_calls.py  test_birdeep.py  test_birdset.py  test_chained.py  test_chiffchaff_id.py  test_clotho.py  test_cloud_paths.py  test_concat.py  test_corvid_wascher.py  test_dartmouth_avian_soundscapes.py  test_dataset.py  test_db_config.py  test_dclde2026.py  test_deduplicate.py  test_dori.py  test_downsample.py  test_ebird_taxonomy.py  test_exporters.py  test_f0_bioacoustic.py  test_file_io.py  test_fileio_functional.py  test_filter.py  test_gcs_paths.py  test_giant_otters.py  test_hawaiian_birds.py  (+45 more)
(+523 files in other folders)
