[project]
name = "esp-data"
version = "0.1.0"
description = "Data tools for ESP projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-storage>=2.19.0",
    "jupyterlab>=4.3.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=7.1.2",
    "ruff>=0.8.1",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "esp_data",
]

[tool.ruff]
line-length = 120
[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  "E4",
  "E7",
  "E9",
  "F", # Flake8
  "I", # isort
]
