[project]
name = "esp-data"
version = "0.1.0"
description = "Data tools for ESP projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudpathlib[all]>=0.20.0",
    "colorama>=0.4.6",
    "datasets==3.4.0", # 📌 this lib needs extra care not to break things
    "db-dtypes>=1.3.1",
    "gcsfs>=2024.9.0.post1",
    "gitpython>=3.1.44",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-secret-manager>=2.23.1",
    "google-cloud-storage>=2.19.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "pytest-aio>=1.9.0",
    "python-dotenv>=1.0.1",
    "s3fs>=2024.9.0",
    "setuptools>=75.8.0",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "webdataset>=0.2.111",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=7.1.2",
    "ruff>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["esp_data"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = [
  ".", "esp_data",
]

[tool.ruff]
line-length = 120
exclude = [
  "**/*.ipynb"
]
[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  "E4",
  "E7",
  "E9",
  "F", # Flake8
  "I", # isort
]
