[project]
name = "esp-data"
version = "1.0.0"
description = "Data tools for ESP projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudpathlib[all]>=0.20.0",
    "gcsfs>=2024.9.0.post1",
    "google-cloud-secret-manager>=2.23.1",
    "google-cloud-storage>=2.19.0",
    "librosa>=0.11.0",
    "pandas",
    "pydantic>=2",
    "resampy",
    "s3fs>=2024.9.0",
    "semver",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings-python>=1.16.10",
    "pre-commit>=4.0.1",
    "pytest>=7.1.2",
    "ruff>=0.8.1",
    "deptry>=0.23.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["esp_data"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = [
  ".", "esp_data",
]
python_files = [
    "test_*.py",
    "check_*.py",
]

[tool.ruff]
# TODO (milad) We need to make this similar to the template
# TODO (milad) remove excludes!
line-length = 120
indent-width = 4
exclude = [
  "**/*.ipynb",
  "tests",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  "E4",
  "E7",
  "E9",
  "F", # Flake8
]

extend-select = ["DOC", "B9", "B", "E", "W", "ANN"]
fixable = ["ALL"]
unfixable = []
preview = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.codespell]
skip = "*.csv"

[tool.isort]
profile = "black"
line_length = 80
filter_files = true

[[tool.uv.index]]
name = "esp-pypi"
url = "https://oauth2accesstoken@us-central1-python.pkg.dev/okapi-274503/esp-pypi/"
publish-url = "https://oauth2accesstoken@us-central1-python.pkg.dev/okapi-274503/esp-pypi/"

[tool.deptry]
exclude = ["conftest.py", ".venv", "tests"]
ignore = ["DEP003"]

[tool.deptry.per_rule_ignores]
DEP002 = ["resampy"]
