[project]
name = "esp-dashboard"
version = "0.0.1"
description = "Interactive dashboard for esp_data — conference demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.6.5",
    "fastapi>=0.115.0",
    "duckdb>=1.1.0",
    "esp-data",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.uv.sources]
esp-data = { path = "../", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["esp_dashboard"]
